# Painter

painbrash/: CMakeLists.txt  mainwindow.cpp  painbrash.pro
painbrush/: CMakeLists.txt  mainwindow.cpp
